# BuddhaShader

./: CMakeLists.txt  CMakeSettings.json  README.md
BuddhaTest/: CMakeLists.txt
BuddhaTest/Shaders/: BuddhaCompute.glsl  BuddhaFragment.glsl  BuddhaVertex.glsl
BuddhaTest/include/: Helpers.h
BuddhaTest/include/glad/: glad.h
BuddhaTest/src/: BuddhaTest.cpp  Helpers.cpp  glad.c
